# Nichifier

./: README.md  nichifier_platform_server.py  pyproject.toml
app/: __init__.py  config.py  database.py  logger.py  models.py  schemas.py  security.py
app/routers/: __init__.py  admin.py  auth.py  niches.py  subscriptions.py
app/services/: __init__.py  monetisation_service.py  newsletter_service.py  niche_service.py
app/static/css/: nichifier_styles.css
app/templates/: admin_dashboard.html  admin_monetisation.html  base.html  dashboard.html  home.html  how_it_works.html  login.html  niche_detail.html  niche_editor.html  premium_upgrade.html  register.html  subscription_management.html
scripts/: setup_environment.ps1  setup_environment.sh
